Add GitHub Actions CI workflow
- Add ci.yml with lint, test, and docker build jobs
- Update requirements.txt (remove Anki-related comments)
- Update pyproject.toml description
- Add tests directory with placeholder test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "gmle"
 version = "0.1.0"
-description = "Guided Meta Learning Engine Plus"
+description = "GMLE Light - Lightweight MCQ Generator with Local Anki Integration"
 requires-python = ">=3.11"
 dependencies = [
     "typer>=0.9.0",
