Clean up Anki headless code for Light version
- Remove Anki/Xvfb related code from scripts (stop.sh, status.sh, service_common.sh)
- Update Python system management (start.py, stop.py) - Anki managed locally on Mac
- Update frontend SystemPage and config-descriptions - remove headless references
- Simplify config files (gmle.yaml.example, gmle.schema.yaml) - remove headless/AnkiWeb settings
- Update .env.example with proper documentation

GMLE Light connects to local Mac's Anki via AnkiConnect (host.docker.internal:8765)

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,35 @@
-# GMLE Light Environment Variables
+# GMLE Light - Environment Variables
 # Copy this file to .env and fill in your API keys
 
-# =================================
-# LLM API Keys (at least one required)
-# =================================
+# ======================
+# LLM API Keys
+# At least one is required
+# ======================
 
 # Cohere API Key
 # Get from: https://dashboard.cohere.com/api-keys
 COHERE_API_KEY=
 
-# Groq API Key (Free tier available)
+# Google AI (Gemini) API Key
+# Get from: https://aistudio.google.com/app/apikey
+GOOGLE_AI_API_KEY=
+
+# Groq API Key (recommended - fast and free tier available)
 # Get from: https://console.groq.com/keys
 GROQ_API_KEY=
 
-# Google AI (Gemini) API Key
-# Get from: https://makersuite.google.com/app/apikey
-GOOGLE_AI_API_KEY=
-
-# =================================
+# ======================
 # Optional
-# =================================
+# ======================
 
-# Readwise API Token (for Readwise ingest)
+# Readwise API Token
 # Get from: https://readwise.io/access_token
 READWISE_TOKEN=
+
+# ======================
+# Advanced (usually not needed)
+# ======================
+
+# AnkiConnect URL (default: http://host.docker.internal:8765)
+# Change only if your Anki is running on a different host/port
+# ANKI_CONNECT_URL=http://host.docker.internal:8765
