feat: GUI機能を追加・改善
1. Space作成機能の追加
   - GUIから新規スペースを作成できるダイアログを実装
   - バックエンドAPIエンドポイント POST /api/v1/spaces を追加
   - スペース設定YAMLファイルとディレクトリを自動生成

2. Anki初期化ボタンの追加
   - Runs ページに「Ankiリソースを初期化」ボタンを追加
   - ワンクリックでデッキとノートタイプを作成可能

3. 不要なポーリングを停止
   - API key check と prerequisites の自動ポーリングを削除
   - LLM API呼び出しの無駄な消費を防止

4. 不要ファイルの削除
   - frontend/README.md（壊れたリンクあり）を削除
   - package-lock.json を削除（npm installに移行）

変更ファイル:
- frontend/src/pages/SpacesPage.tsx
- frontend/src/pages/RunsPage.tsx
- frontend/src/api/spaces.ts
- frontend/src/components/ui/dialog.tsx (新規)
- frontend/src/components/ui/label.tsx (新規)
- frontend/package.json
- gmle/app/api/rest/routes/spaces.py
- gmle/app/api/rest/models.py

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,10 @@
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.1.0",
     "lucide-react": "^0.294.0",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "class-variance-authority": "^0.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
