fix: Docker設定の修正
1. .envファイルを読み書き可能にマウント
   - docker-compose.yml: :ro フラグを削除
   - APIキー保存時のエラーを解消

2. npm ci から npm install に変更
   - Dockerfile: package-lock.json の同期エラーを回避
   - 依存関係の追加時に柔軟に対応可能

変更ファイル:
- docker-compose.yml
- Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ./config:/app/config
       - ./data:/app/data
       # .env file for API keys
-      - ./.env:/app/.env:ro
+      - ./.env:/app/.env
     environment:
       - PYTHONUNBUFFERED=1
       - GMLE_CONFIG_DIR=/app/config
