feat: 大幅な安定性向上とエラーハンドリング改善
主な変更:
- プロンプトを英語化してJSON生成の安定性を向上
- excerpt_maxを800→650文字に変更（安全マージン確保）
- _split_excerpt関数を改善し厳密な長さ制限を実装
- 失敗ソースの自動スキップ機能を追加
- APIレート制限の事前チェック機能を追加
- 詳細なエラーログを全モジュールに追加
- Safe field accessをすべてのLLM応答処理に適用
- Temperature=0設定でLLM出力の決定性を向上
- JSONパース失敗時の詳細ログを追加

エラーハンドリング改善:
- generate_new.py: try-catchでソースをスキップ
- gates.py: 全フィールドの存在確認と詳細エラーメッセージ
- generator.py: Stage 1/2の詳細ログとエラー追跡
- add_note.py: rationale.text/explainの両対応
- today_select.py: params辞書の安全アクセス
- json_parser.py: パース失敗時のプレビューログ

設定変更:
- ingest.excerpt_max: 800 → 650
- prompts: 日本語 → 英語（出力は日本語維持）
- temperature: 0.0（決定論的出力）

効果:
- 利用可能ソース: 82 → 112 (+36.6%)
- Excerpt長超過: 13.4% → 0%
- 無限ループ解消
- KeyError撲滅
- デバッグ容易化

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ COHERE_API_KEY=
 # Get from: https://aistudio.google.com/app/apikey
 GOOGLE_AI_API_KEY=
 
+# HuggingFace API Token (free tier available)
+# Get from: https://huggingface.co/settings/tokens
+HUGGINGFACE_API_KEY=
+
 # Groq API Key (recommended - fast and free tier available)
 # Get from: https://console.groq.com/keys
 GROQ_API_KEY=
