--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - COHERE_API_KEY=${COHERE_API_KEY:-}
       - GROQ_API_KEY=${GROQ_API_KEY:-}
       - GOOGLE_AI_API_KEY=${GOOGLE_AI_API_KEY:-}
+      - HUGGINGFACE_API_KEY=${HUGGINGFACE_API_KEY:-}
       - READWISE_TOKEN=${READWISE_TOKEN:-}
     # extra_hosts allows container to access host's localhost
     extra_hosts:
